    optimizePlusImageLayers and separateImages to STL.h (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=23699).
  * Added support for the fill area flag ('^') and the pixel area
    count limit flag ('@') to the Geometry class of Magick++ (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=23704).

2013-07-01  6.8.6-4 Cristy  <quetzlzacatenango@image...>
  * Thumb property need Height, not height (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23661).
  * White pixels previously were written as black for the CIP format (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23677).
  * Rec709Luma is sRGB compatible (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23693).
  * Colorspace RGB is linear, gamma is 1.0 (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23708).

2013-07-01  6.8.6-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.6-3, SVN revision 12579.

2013-06-26  6.8.6-3 Cristy  <quetzlzacatenango@image...>
  * Improve HCL to RGB roundtrip (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22384).
  * Prefer external log configuration file to built-in (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23640).
  * Do not log in the IsLinkedListEmpty() method to prevent overflow (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23640).
  * Fix bug loading TGA image with 32-bit palette (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=17889).
  * Color profiles are no longer corrupted for the JPEG format (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23651).
  * Repair problem with -emboss / -equalize problem (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23643).
